# terminal

./: .electron-builder.config.js  .env.development  .env.production  README.md  forge.config.ts  global.d.ts  index.html  package-lock.json  package.json  vite.config.js
.github/: release-drafter.yml  renovate.json
.github/workflow/: release.yml
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml
public/json/: config.json
src/: App.vue  main.config.ts  main.js  main.ts  preload.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/config/: db.rs
src-tauri/src/modules/: card.rs  event.rs  greet.rs  timecard.rs
src/components/: CardInfo.vue  Credited.vue  Greet.vue  NumberCard.vue  TableCardInfo.vue
src/helpers/: fetch-wrapper.ts  formatter.ts
src/modules/historical/views/: HomeView.vue  TableView.vue
src/plugins/: vuetify.js
src/router/: index.js
src/views/: NotFound.vue  Table.vue  Video.vue
tests/: e2e.spec.ts
types/: env.d.ts
